objects/LCRM_Opportunity_Split__c.object
<CustomObject>
    <fields>
        <fullName>LCMR_Rep_Function__c</fullName>
        <formula>LCRM_Opportunity_Team_Clone__r.LCRM_Rep_Function__c</formula>
        <label>Rep Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_IsLoggedinUser__c</fullName>
        <formula>IF(LCRM_User_Id__c = $User.Id, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLoggedinUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Opportunity_Product_Clone__c</fullName>
        <label>Opportunity Product Clone</label>
        <referenceTo>LCRM_Opportunity_Product_Clone__c</referenceTo>
        <relationshipLabel>Opportunity Split</relationshipLabel>
        <relationshipName>Opportunity_Split</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LCRM_Opportunity_Team_Clone__c</fullName>
        <label>Opportunity Team Clone</label>
        <referenceTo>LCRM_Opportunity_Team_Clone__c</referenceTo>
        <relationshipLabel>Opportunity Split</relationshipLabel>
        <relationshipName>Opportunity_Split</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LCRM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Split</relationshipLabel>
        <relationshipName>Opportunity_Split</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Percent__c</fullName>
        <label>Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LCRM_Sales_Credit__c</fullName>
        <formula>(LCRM_Percent__c * LCRM_Opportunity_Product_Clone__r.LCRM_Incremental_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_User_Id__c</fullName>
        <formula>LCRM_Opportunity_Team_Clone__r.LCRM_User__c</formula>
        <label>User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMCR_User_Name__c</fullName>
        <formula>LCRM_Opportunity_Team_Clone__r.LCRM_User__r.FirstName + &quot; &quot; +  LCRM_Opportunity_Team_Clone__r.LCRM_User__r.LastName</formula>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Split</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Opp Split No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Split</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>